--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status": "^1.7.4",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.5",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/validator": "^13.11.10",
